tests/cases/ok/print_lists.p4
def main() -> None:
    ints: list[int] = [1, 2, 3]
    floats: list[float] = [1.5, 2.0]
    bools: list[bool] = [True, False]
    chars: list[char] = ['a', 'z']
    print(ints)
    print(floats)
    print(bools)
    print(chars)
