tests/cases/fail/list_bool_method_arg_type.p4
def main() -> None:
    xs: list[bool] = [True]
    xs.append(1)
